syntax = "proto3";

package petadoption;

// The service definition
service PetAdoptionService {
    // Registers a new pet
    rpc RegisterPet (PetInfo) returns (RegisterResponse);

    // Searches for a pet based on name, breed, or gender
    rpc SearchPet (SearchRequest) returns (SearchResponse);
}

// The message representing a pet's information
message PetInfo {
    string name = 1;
    string breed = 2;
    string gender = 3;
    int32 age = 4;
}

// The request message for searching a pet
message SearchRequest {
    string query = 1;
}

// The response message for registration
message RegisterResponse {
    string message = 1;
}

// The response message for searching a pet
message SearchResponse {
    repeated PetInfo pets = 1;
}
